# aoc

./: .gitignore  Cargo.toml  README.md  getinput.example  init
01/: a.hs  a.rs  b.rs
02/: a.rs  b.hs
03/: a.hs  a.rs  b.hs
04/: a.hs  b.hs  b.rs
05/: b.hs  b.rs
06/: a.hs  b.rs
07/: a.hs  a.rs  b.hs  b_fast.rs
08/: a.hs  b.hs
09/: a.hs  b.hs  b.rs
10/: a.hs  a.rs  b.hs  b.rs
11/: a.hs  a.rs  b.hs  b.rs
12/: a.rs  b.hs  b.rs
13/: a.hs  b.hs  b.rs
14/: a.hs  a.rs  b.hs  b.rs
15/: a.hs  a.rs  b.hs  b.rs
16/: a.hs
17/: a.hs  b.hs  b.rs
18/: a.hs  a.rs  b.hs
19/: a.hs  a.rs  b.hs
20/: a.hs
2020/01/: b.hs
2020/02/: a.hs
2020/03/: a.hs
2020/05/: a.hs
2020/06/: a.hs  b.hs
2020/07/: b.hs
2020/08/: b.hs
2020/11/: a.hs
2020/12/: a.hs
2020/15/: a.hs  b.hs
2020/16/: b.hs
2020/17/: b.hs
2020/18/: a.hs
2020/19/: a.hs
2020/20/: b.hs
2020/24/: a.hs
2020/25/: a.hs
2021/: README.md
2021/02/: b.rs
2021/03/: b.rs
2021/04/: a.rs
2021/05/: a.rs
2021/06/: a.rs
2021/07/: b.rs
2021/08/: a.rs  b.rs
2021/09/: a.rs
2021/12/: b.rs
2021/13/: a.rs
2021/16/: a.rs  b.rs
2021/17/: a.rs
2021/18/: b.rs
2021/19/: b.rs
2021/20/: a.rs  b.rs
2021/22/: a.rs  b.rs
2021/23/: b.rs
2021/24/: a.rs  b.rs
2021/25/: a.rs
2022/01/: a.go  b.go
2022/02/: a.go  b.go
2022/03/: a.go  b.go
2022/04/: a.go  b.go
2022/05/: a.go  b.go
2022/06/: a.go  b.go
2022/07/: a.go  b.go
2022/08/: a.go  b.go
2022/09/: a.go  b.go
2022/10/: a.go  b.go
2022/11/: a.go  b.go
2022/12/: a.go  b.go
2022/13/: a.go  b.go
2022/14/: a.go  b.go
2023/: common.cpp  common.h  common.hpp
2023/01/: a.cpp  b.cpp
2023/02/: a.cpp  b.cpp
2023/03/: a.cpp  b.cpp
2023/04/: a.cpp  b.cpp
2023/05/: a.cpp  b.cpp
2023/06/: a.cpp  b.cpp
2023/07/: a.cpp  b.cpp
21/: a.hs  a.rs  b.hs  b.rs
22/: a.hs  b.hs
23/: 01.php  02.php  a.rs
24/: b.hs
(+39 files in other folders)
